--- a/index.html
+++ b/index.html
@@ -3,20 +3,9 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
-		<link rel="stylesheet" href="style.css" />
+		<title>Gradient Background</title>
 	</head>
 	<body>
-		<div class="addnew">
-			<h1>Add more:</h1>
-			<form>
-				<label for="newitem" id="adding">Add to the list:</label>
-				<input type="text" id="userinput" placeholder="To rest" />
-				<button id="send">Update</button>
-			</form>
-		</div>
-		<ul id="test"></ul>
-
-		<script type="text/javascript" src="script.js"></script>
+		<h1>Cool Generator</h1>
 	</body>
 </html>
