--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<title>Gradient Background</title>
 	</head>
 	<body>
-		<h1>Cool Generator</h1>
+		<h1>Test12345 Generator</h1>
 		<h2>Test12s</h2>
 	</body>
 </html>
