--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Gradient Background</title>
+		<link
+			href="https://fonts.googleapis.com/css?family=Oswald"
+			rel="stylesheet"
+			type="text/css"
+		/>
+		<link rel="stylesheet" href="style.css" />
+		<title>Document</title>
 	</head>
-	<body>
-		<h1>Test123456 Generator</h1>
-		<h2>This is the background12</h2>
+	<body id="farbe">
+		<h1>Background Generator</h1>
+		<input class="color1" type="color" name="color1" value="#00ff00" />
+		<input class="color2" type="color" name="color2" value="#ff0000" />
+		<h2>Current CSS Background</h2>
+		<h3></h3>
+		<script type="text/javascript" src="bundle.js"></script>
 	</body>
 </html>
